# gdpr-obfuscator

./: .gitignore  .markdownlint.json  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/commands/: commit.md
.github/workflows/: python-package.yml
docs/: resources.md
docs/plan/: plan.md
infrastructure/: Pulumi.yaml  __main__.py  pyproject.toml
infrastructure/components/: iam.py  lambda_function.py  s3.py
infrastructure/helpers/: build_lambda_layer.py
infrastructure/scripts/: build_lambda_layer.py
src/gdpr_obfuscator/: __init__.py
src/gdpr_obfuscator/core/: __init__.py  gdpr_obfuscator.py  obfuscator.py
src/gdpr_obfuscator_profiling/: gdpr_obfuscator_profiling.py  gdpr_obfuscator_profiling_standalone.py
src/gdpr_obfuscator_sample_lambda/: gdpr_obfuscator_sample_lambda.py
tests/: __init__.py  conftest.py  test_gdpr_obfuscateor_sample_lambda.py  test_gdpr_obfuscator.py  test_gdpr_obfuscator_sample_lambda.py  test_obfuscator.py
tests/data/: complex_pii_data.csv  complex_pii_data.json  complex_pii_data.parquet  complex_pii_data_obfuscated.csv  complex_pii_data_obfuscated.json  complex_pii_data_obfuscated.parquet  edge_cases.csv  edge_cases_missing_data.csv  edge_cases_missing_data_obfuscated.csv  edge_cases_no_rows.csv  edge_cases_non_standard_chars.csv  edge_cases_non_standard_chars_obfuscated.csv  edge_cases_null_values.json  edge_cases_null_values_obfuscated.json  large_pii_data.csv  large_pii_data.json  large_pii_data.parquet  large_pii_data_obfuscated.csv  large_pii_data_obfuscated.json  large_pii_data_obfuscated.parquet  simple_pii_data.csv  simple_pii_data_different_masking_string_obfuscated.csv  simple_pii_data_obfuscated.csv
