[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdpr-obfuscator"
version = "1.0.0"
description = "A Python library for obfuscating personally identifiable information (PII) in CSV files for GDPR compliance"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Theo Ribeiro" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["gdpr", "pii", "obfuscation", "privacy", "data-protection", "csv"]

dependencies = ["boto3==1.40.35", "polars==1.33.1"]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "moto==5.1.13",
    "ruff==0.13.1",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-testdox==3.1.0",
    "types-boto3[essential]>=1.40.36",
]


[project.urls]
Homepage = "https://github.com/theorib/gdpr-obfuscator"
Repository = "https://github.com/theorib/gdpr-obfuscator.git"
Issues = "https://github.com/theorib/gdpr-obfuscator/issues"
Documentation = "https://github.com/theorib/gdpr-obfuscator#readme"

# [project.scripts]
# gdpr-obfuscator = "gdpr_obfuscator.cli:main"

[tool.pytest.ini_options]
addopts = "-vvv -rP --testdox"
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

[tool.hatch.build.targets.wheel.force-include]
"src/gdpr_obfuscator" = "gdpr_obfuscator"

[tool.uv.workspace]
members = ["infrastructure"]

[tool.hatch.build.targets.wheel]
packages = ["src/gdpr_obfuscator"]
